tests/expectations/compiler/futures/future_in_tuple_check_fail.out
Error [ETYC0372104]: Not all Finals were consumed: result2
    --> compiler-test:18:19
     |
  18 |             final {
     |                   ^
  19 |                 finish(result.1);
     |                 ^^^^^^^^^^^^^^^^^
  20 |             },
     |             ^
     |
     = Make sure all Finals are consumed exactly once. Consume by passing to a final fn call or final block.
